--- a/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment.ipynb
+++ b/module1-Intro-to-Neural-Networks/LS_DS_421_Intro_to_NN_Assignment.ipynb
@@ -27,13 +27,21 @@
     "You can add image, diagrams, whatever you need to ensure that you understand the concepts below.\n",
     "\n",
     "### Input Layer:\n",
+    "        An input layer is at the start of a neural network. It takes in the data from the dataset.\n",
     "### Hidden Layer:\n",
+    "        After the input layer, the data goes to a hidden layer. The hidden layers are like functions. They transform the data.\n",
     "### Output Layer:\n",
+    "        The output layer is what the neural network...outputs. This is where we get our predictions or any other output.\n",
     "### Neuron:\n",
+    "        Neurons are a part of the brain that receive signals from other neurons and pass that signal along to other neurons as well. Creating a network of neurons that pass information through your body.\n",
     "### Weight:\n",
+    "        Weights are what is applied to the inputs in the hidden layers. They are much like coefficients in a linear regression problem. They modify the data in some way.\n",
     "### Activation Function:\n",
+    "        An activation function is how the data is passed to the next layer of a network.\n",
     "### Node Map:\n",
-    "### Perceptron:\n"
+    "        A node map shows us what is happening in the neural network. Where all the layers are and which nodes are connected to others.\n",
+    "### Perceptron:\n",
+    "        A pereceptron is the basic unit of a neural network. Just a single node. It takes an input, applies a weight and outputs something."
    ]
   },
   {
@@ -55,7 +63,7 @@
     "id": "PlSwIJMC0A8F"
    },
    "source": [
-    "#### Your Answer Here"
+    "The data goes into the input layer, then into a hidden layer. In the hidden layer, the inputs are multiplied by the weights, and the bias is added after that. Then the activation function transfers the data to the output layer and that's what we get back."
    ]
   },
   {
@@ -82,6 +90,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "data = { 'x1': [0,1,0,1],\n",
     "         'x2': [0,0,1,1],\n",
     "         'y':  [1,1,1,0]\n",
@@ -92,7 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df[['x1','x2']].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -100,16 +118,83 @@
    },
    "outputs": [],
    "source": [
-    "##### Your Code Here #####\n",
-    "\n"
+    "def sigmoid(x):\n",
+    "    return 1/(1 + np.exp(-x))\n",
+    "\n",
+    "def sigmoid_derivate(x):\n",
+    "    sx = sigmoid(x)\n",
+    "    return sx * (1 - sx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y = np.array([df['y']]).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.03644799],\n",
+       "       [0.65758774]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights = 2 * np.random.random((2,1)) - 1\n",
+    "weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target: \n",
+      " [[1]\n",
+      " [1]\n",
+      " [1]\n",
+      " [0]]\n",
+      "Outputs: \n",
+      " [[0.5]\n",
+      " [0.5]\n",
+      " [0.5]\n",
+      " [0.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for iteration in range(10000):\n",
+    "    \n",
+    "    weighted_sum = np.dot(X, weights)\n",
+    "    \n",
+    "    activated_output = sigmoid(weighted_sum)\n",
+    "    \n",
+    "    error = y - activated_output\n",
+    "    \n",
+    "    adjustments = error * sigmoid_derivate(weighted_sum)\n",
+    "    \n",
+    "    weights += np.dot(X.T, adjustments)\n",
+    "    \n",
+    "print('Target:', '\\n', y)\n",
+    "print('Outputs:', '\\n', activated_output)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +327,7 @@
        "4                     2.288   33        1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,12 +354,15 @@
     "\n",
     "feats = list(diabetes)[:-1]\n",
     "\n",
-    "X = ..."
+    "normalizer = Normalizer()\n",
+    "\n",
+    "X = diabetes[feats]\n",
+    "y = diabetes['Outcome']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -290,33 +378,45 @@
     "        self.niter = niter\n",
     "    \n",
     "    def __sigmoid(self, x):\n",
-    "        return None\n",
+    "        return 1/(1 + np.exp(-x))\n",
     "    \n",
     "    def __sigmoid_derivative(self, x):\n",
-    "        return None\n",
+    "        sx = self.__sigmoid(x)\n",
+    "        return sx * (1 - sx)\n",
     "\n",
     "    def fit(self, X, y):\n",
-    "    \"\"\"Fit training data\n",
-    "    X : Training vectors, X.shape : [#samples, #features]\n",
-    "    y : Target values, y.shape : [#samples]\n",
-    "    \"\"\"\n",
+    "        \"\"\"Fit training data\n",
+    "        X : Training vectors, X.shape : [#samples, #features]\n",
+    "        y : Target values, y.shape : [#samples]\n",
+    "        \"\"\"\n",
     "\n",
     "        # Randomly Initialize Weights\n",
-    "        weights = ...\n",
+    "        self.weights = 2 * np.random.random((X.shape[1], 1)) - 1\n",
     "\n",
     "        for i in range(self.niter):\n",
     "            # Weighted sum of inputs / weights\n",
-    "\n",
+    "            weighted_sum = np.dot(X, self.weights)\n",
     "            # Activate!\n",
-    "\n",
+    "            activated_output = self.__sigmoid(weighted_sum)\n",
     "            # Cac error\n",
-    "\n",
+    "            error = np.array([y]).T - activated_output\n",
+    "            adjustments = error * self.__sigmoid_derivative(weighted_sum)\n",
     "            # Update the Weights\n",
-    "\n",
-    "\n",
+    "            self.weights += np.dot(X.T, adjustments)\n",
+    "            \n",
     "    def predict(self, X):\n",
-    "    \"\"\"Return class label after unit step\"\"\"\n",
-    "        return None"
+    "        \"\"\"Return class label after unit step\"\"\"\n",
+    "        return self.__sigmoid(np.dot(X, self.weights))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perceptron = Perceptron(niter=100)\n",
+    "perceptron.fit(X, y)"
    ]
   },
   {
@@ -343,9 +443,9 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "U4-S1-NLP (Python3)",
    "language": "python",
-   "name": "python3"
+   "name": "u4-s1-nlp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -357,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
